--- a/index.html
+++ b/index.html
@@ -73,9 +73,22 @@
 
   <!-- contacto -->
 
-  <section>
-    <h2>Contacto</h2>
-  </section>
+
+
+<form>
+  
+  <h2>Contacto</h2>
+  <div class="mb-3">
+    <label for="exampleFormControlInput1" class="form-label">Email address</label>
+    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+  </div>
+  <div class="mb-3">
+    <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+  </div>
+
+</form>
+
   <!-- footer -->
 
   <!-- bootstrap -->
