--- a/index.html
+++ b/index.html
@@ -74,19 +74,22 @@
   <!-- contacto -->
 
 
-
-<form>
-  
+<form class="container">
   <h2>Contacto</h2>
   <div class="mb-3">
-    <label for="exampleFormControlInput1" class="form-label">Email address</label>
-    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+    <label for="exampleFormControlInput1" class="form-label">Nombre</label>
+    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
   </div>
   <div class="mb-3">
-    <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
-    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    <label for="exampleFormControlInput1" class="form-label">Asunto</label>
+    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
+  </div>
+  <div class="mb-3">
+    <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" style="height: 150px;"></textarea>
   </div>
 
+  <button type="button" class="btn btn-info">Enviar</button>
 </form>
 
   <!-- footer -->
