--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- bootstrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
   <link rel="shortcut icon" href="./assets/img/viajes.svg" type="svg">
   <link rel="stylesheet" href="./assets/css/styles.css">
@@ -70,25 +69,6 @@
 
   <!-- quienes somos -->
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  
   <!-- destacados -->
   <section class="destacados container ">
 
@@ -96,10 +76,9 @@
     <div class="container my-3">
       <div class="row justify-content-center gap-3">
         <div class="card col-md-3 px-0" style="width: 16rem;">
-          <img src="./assets/img/card1.jpg" class="card-img-top img-fluid"
-            alt="">
+          <img src="./assets/img/card1.jpg" class="card-img-top img-fluid" alt="">
           <div class="card-body">
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero numquam, dolore repellat culpa consectetur illo, et qui saepe est adipisci ut quasi non dolorem fugit hic aperiam eum eligendi minus.</p>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero numquam, dolore repellat culpa consectetur illo, et qui saepe est adipisci ut quasi non dolorem fugit hic aperiam eum eligendi minus.</p>
           </div>
         </div>
 
@@ -113,54 +92,48 @@
         <div class="card col-md-3 px-0" style="width: 16rem;">
           <img src="./assets/img/card3.jpg" class="card-img-top img-fluid" alt="">
           <div class="card-body">
-           
+
             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique placeat iste et repudiandae magnam provident unde excepturi possimus iure fugiat error, nisi quis. Architecto esse harum earum voluptate deleniti velit.</p>
           </div>
         </div>
         <div class="card col-md-3 px-0" style="width: 18rem;">
           <img src="./assets/img/card4.jpg" class="card-img-top img-fluid" alt="">
           <div class="card-body">
-           
+
             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique placeat iste et repudiandae magnam provident unde excepturi possimus iure fugiat error, nisi quis. Architecto esse harum earum voluptate deleniti velit.</p>
           </div>
+        </div>
       </div>
-    </div>
   </section>
+
   <!-- contacto -->
+  <form class="container">
+    <h2>Contacto</h2>
+    <hr>
+    <div class="mb-3">
+      <label for="exampleFormControlInput1" class="form-label">Nombre</label>
+      <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
+    </div>
+    <div class="mb-3">
+      <label for="exampleFormControlInput1" class="form-label">Asunto</label>
+      <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
+    </div>
+    <div class="mb-3">
+      <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
+      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" style="height: 150px;"></textarea>
+    </div>
 
-
-<form class="container">
-  <h2>Contacto</h2>
-  <hr>
-  <div class="mb-3">
-    <label for="exampleFormControlInput1" class="form-label">Nombre</label>
-    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
-  </div>
-  <div class="mb-3">
-    <label for="exampleFormControlInput1" class="form-label">Asunto</label>
-    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
-  </div>
-  <div class="mb-3">
-    <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
-    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" style="height: 150px;"></textarea>
-  </div>
-
-  <button type="button" class="btn btn-info">Enviar</button>
-</form>
+    <button type="button" class="btn btn-info">Enviar</button>
+  </form>
 
   <!-- footer -->
 
   <!-- bootstrap -->
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 
   <!-- jquery -->
-  <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
-    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 
 </body>
 
