--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <h2 class="text-center my-5">DESTACADOS</h2>
     <div class="container my-3">
       <div class="row justify-content-center gap-3">
-        <div class="card col-md-3 px-0" style="width: 16rem;">
+        <div class="card col-md-3 px-0">
           <img src="./assets/img/card1.jpg" class="card-img-top img-fluid"
             alt="">
           <div class="card-body">
@@ -103,21 +103,21 @@
           </div>
         </div>
 
-        <div class="card col-md-3 px-0" style="width: 16rem;">
+        <div class="card col-md-3 px-0">
           <img src="./assets/img/card2.jpg" class="card-img-top img-fluid" alt="">
           <div class="card-body">
             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae amet voluptas accusamus velit quibusdam, sed beatae placeat consectetur quasi minima repellat. Sit illo illum obcaecati, repudiandae voluptatibus earum ducimus. Odit!</p>
           </div>
         </div>
 
-        <div class="card col-md-3 px-0" style="width: 16rem;">
+        <div class="card col-md-3 px-0">
           <img src="./assets/img/card3.jpg" class="card-img-top img-fluid" alt="">
           <div class="card-body">
            
             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique placeat iste et repudiandae magnam provident unde excepturi possimus iure fugiat error, nisi quis. Architecto esse harum earum voluptate deleniti velit.</p>
           </div>
         </div>
-        <div class="card col-md-3 px-0" style="width: 18rem;">
+        <div class="card col-md-3 px-0">
           <img src="./assets/img/card4.jpg" class="card-img-top img-fluid" alt="">
           <div class="card-body">
            
