--- a/index.html
+++ b/index.html
@@ -70,14 +70,13 @@
   <!-- quienes somos -->
 
   <!-- destacados -->
-  <section class="destacados container ">
+  <section class="destacados container">
 
     <h2 class="text-center my-5">DESTACADOS</h2>
     <div class="container my-3">
       <div class="row justify-content-center gap-3">
         <div class="card col-md-3 px-0">
-          <img src="./assets/img/card1.jpg" class="card-img-top img-fluid"
-            alt="">
+          <img src="./assets/img/card1.jpg" class="card-img-top img-fluid" alt="">
           <div class="card-body">
             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero numquam, dolore repellat culpa consectetur illo, et qui saepe est adipisci ut quasi non dolorem fugit hic aperiam eum eligendi minus.</p>
           </div>
