README y Smooth Scroll

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
             <a class="nav-link" href="#">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Quienes Somos</a>
+            <a class="nav-link" href="#quienes_somos">Quienes Somos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Destacados</a>
+            <a class="nav-link" href="#destacados">Destacados</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contacto</a>
+            <a class="nav-link" href="#contacto">Contacto</a>
           </li>
         </ul>
       </div>
@@ -70,7 +70,7 @@
   <!-- quienes somos -->
 
   <!-- destacados -->
-  <section class="destacados container">
+  <section id="destacados" class="container">
 
     <h2 class="text-center my-5">DESTACADOS</h2>
     <div class="container my-3">
@@ -107,7 +107,7 @@
   </section>
 
   <!-- contacto -->
-  <form class="container">
+  <form id="contacto" class="container">
     <h2>Contacto</h2>
     <hr>
     <div class="mb-3">
