--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <!-- bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
+  <!-- fontawesome -->
+  <script src="https://kit.fontawesome.com/5499527a0e.js" crossorigin="anonymous"></script>
+
   <link rel="shortcut icon" href="./assets/img/viajes.svg" type="svg">
   <link rel="stylesheet" href="./assets/css/styles.css">
   <title>Viajes Chile</title>
@@ -68,6 +71,32 @@
   </div>
 
   <!-- quienes somos -->
+  <section id="quienes_somos" class="container mt-5 d-sm-none d-md-block">
+    <h2>¿QUIÉNES SOMOS?</h2>
+    <hr>
+    <div class="justify-content-center card-group gap-1">
+      <div class="card col-md-4 ">
+        <div class="card-header text-center"><i class="fa-solid fa-plane fa-xl"></i></div>
+        <div class="card-body">
+          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero numquam, dolore repellat culpa consectetur illo, et qui saepe est adipisci ut quasi non dolorem fugit hic aperiam eum eligendi minus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero numquam, dolore repellat culpa consectetur illo, et qui saepe est adipisci ut quasi non dolorem fugit hic aperiam eum eligendi minus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero numquam, dolore repellat culpa consectetur illo, et qui saepe est adipisci ut quasi non dolorem fugit hic aperiam eum eligendi minus</p>
+        </div>
+      </div>
+
+      <div class="card col-md-4 ">
+        <div class="card-body">
+          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero numquam, dolore repellat culpa consectetur illo, et qui saepe est adipisci ut quasi non dolorem fugit hic aperiam eum eligendi minus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero numquam, dolore repellat culpa consectetur illo, et qui saepe est adipisci ut quasi non dolorem fugit hic aperiam eum eligendi minus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero numquam, dolore repellat culpa consectetur illo, et qui saepe est adipisci ut quasi non dolorem fugit hic aperiam eum eligendi minus</p>
+        </div>
+        <div class="card-header text-center"><i class="fa-solid fa-mountain fa-xl"></i></div>
+      </div>
+
+      <div class="card col-md-4 ">
+        <div class="card-header text-center"><i class="fa-solid fa-route fa-xl"></i></div>
+        <div class="card-body">
+          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero numquam, dolore repellat culpa consectetur illo, et qui saepe est adipisci ut quasi non dolorem fugit hic aperiam eum eligendi minus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero numquam, dolore repellat culpa consectetur illo, et qui saepe est adipisci ut quasi non dolorem fugit hic aperiam eum eligendi minus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero numquam, dolore repellat culpa consectetur illo, et qui saepe est adipisci ut quasi non dolorem fugit hic aperiam eum eligendi minus</p>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- destacados -->
   <section id="destacados" class="container">
@@ -127,6 +156,24 @@
   </form>
 
   <!-- footer -->
+
+  <footer>
+    <div class="container justify-content-center text-center pt-3 mt-5">
+      <div class="row">
+        <div class="col-md-6">
+          <p>VIAJES CHILE</p>
+        </div>
+        <div class="col-md-6">
+          <p class="d-flex justify-content-center gap-3">
+            <i class="fa-brands fa-square-github fa-xl"></i>
+            <i class="fa-brands fa-linkedin fa-xl"></i>
+            <i class="fa-brands fa-square-facebook fa-xl"></i>
+            <i class="fa-brands fa-square-twitter fa-xl"></i>
+          </p>
+        </div>
+      </div>
+    </div>
+  </footer>
 
   <!-- bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
