--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
   <!-- contacto -->
   <form id="contacto" class="container">
-    <h2>Contacto</h2>
+    <h2>CONTACTO</h2>
     <hr>
     <div class="mb-3">
       <label for="exampleFormControlInput1" class="form-label">Nombre</label>
@@ -156,7 +156,6 @@
   </form>
 
   <!-- footer -->
-
   <footer>
     <div class="container justify-content-center text-center pt-3 mt-5">
       <div class="row">
@@ -165,10 +164,18 @@
         </div>
         <div class="col-md-6">
           <p class="d-flex justify-content-center gap-3">
-            <i class="fa-brands fa-square-github fa-xl"></i>
-            <i class="fa-brands fa-linkedin fa-xl"></i>
-            <i class="fa-brands fa-square-facebook fa-xl"></i>
-            <i class="fa-brands fa-square-twitter fa-xl"></i>
+            <a href="https://github.com/" target="_blank" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Ir a GitHub">
+              <i class="fa-brands fa-square-github fa-xl"></i>
+            </a>
+            <a href="https://cl.linkedin.com/" target="_blank" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Ir a LinkedIn">
+              <i class="fa-brands fa-linkedin fa-xl"></i>
+            </a>
+            <a href="https://www.facebook.com/" target="_blank" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Ir a Facebook">
+              <i class="fa-brands fa-square-facebook fa-xl"></i>
+            </a>
+            <a href="https://twitter.com/" target="_blank" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Ir a Twitter">
+              <i class="fa-brands fa-square-twitter fa-xl"></i>
+            </a>
           </p>
         </div>
       </div>
@@ -182,6 +189,7 @@
   <!-- jquery -->
   <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 
+  <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
