--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- fuente google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <!-- bootstrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
   <link rel="shortcut icon" href="./assets/img/viajes.svg" type="svg">
   <link rel="stylesheet" href="./assets/css/styles.css">
@@ -22,7 +31,8 @@
         <img src="./assets/img/viajes.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
         Viajes Chile
       </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
@@ -70,38 +80,44 @@
   <!-- quienes somos -->
 
   <!-- destacados -->
-  <section class="destacados container ">
+  <section class="destacados container mb-5">
 
     <h2 class="text-center my-5">DESTACADOS</h2>
-    <div class="container my-3">
-      <div class="row justify-content-center gap-3">
+    <hr class="mb-5">
+    <div class="container my-3 px-0">
+      <div class="row justify-content-center gap-3 gap-xlg-5">
         <div class="card col-md-3 px-0">
-          <img src="./assets/img/card1.jpg" class="card-img-top img-fluid"
-            alt="">
+          <img src="./assets/img/card1.jpg" class="card-img-top img-fluid" alt="">
           <div class="card-body">
-            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero numquam, dolore repellat culpa consectetur illo, et qui saepe est adipisci ut quasi non dolorem fugit hic aperiam eum eligendi minus.</p>
+            <h5>Lorem ipsum dolor sit amet</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero numquam, dolore repellat
+              culpa consectetur illo.</p>
           </div>
         </div>
 
         <div class="card col-md-3 px-0">
           <img src="./assets/img/card2.jpg" class="card-img-top img-fluid" alt="">
           <div class="card-body">
-            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae amet voluptas accusamus velit quibusdam, sed beatae placeat consectetur quasi minima repellat. Sit illo illum obcaecati, repudiandae voluptatibus earum ducimus. Odit!</p>
+            <h5>Consectetur, adipisicing elit</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae amet voluptas accusamus
+              velit quibusdam, sed beatae placeat consectetur. Odit!</p>
           </div>
         </div>
 
         <div class="card col-md-3 px-0">
           <img src="./assets/img/card3.jpg" class="card-img-top img-fluid" alt="">
           <div class="card-body">
-
-            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique placeat iste et repudiandae magnam provident unde excepturi possimus iure fugiat error, nisi quis. Architecto esse harum earum voluptate deleniti velit.</p>
+            <h5>Sed do eiusmod tempor incididunt ut labore</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique placeat iste et
+              repudiandae magnam provident unde excepturi possimus iure fugiat error, nisi quis.</p>
           </div>
         </div>
         <div class="card col-md-3 px-0">
           <img src="./assets/img/card4.jpg" class="card-img-top img-fluid" alt="">
           <div class="card-body">
-
-            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique placeat iste et repudiandae magnam provident unde excepturi possimus iure fugiat error, nisi quis. Architecto esse harum earum voluptate deleniti velit.</p>
+            <h5>Ut enim ad minim veniam</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique placeat iste et
+              repudiandae magnam provident unde excepturi possimus iure fugiat error, nisi quis.</p>
           </div>
         </div>
       </div>
@@ -130,11 +146,16 @@
   <!-- footer -->
 
   <!-- bootstrap -->
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+    crossorigin="anonymous"></script>
 
   <!-- jquery -->
-  <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+    crossorigin="anonymous"></script>
 
 </body>
 
