Correcciones CSS y HTML

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   </div>
 
   <!-- quienes somos -->
-  <section id="quienes_somos" class="container mt-5 d-sm-none d-md-block">
+  <section id="quienes_somos" class="container mt-5 d-none d-md-block">
     <h2>¿QUIÉNES SOMOS?</h2>
     <hr>
     <div class="justify-content-center card-group gap-1">
