--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
   </section>
 
   <!-- destacados -->
-  <section id="destacados" class="container mb-5">
-    <h2 class="text-center my-5">DESTACADOS</h2>
-    <hr class="mb-5">
+  <section id="destacados" class="container">
+    <h2 class="text-center mt-5">DESTACADOS</h2>
+    <hr>
     <div class="container my-3 px-0">
       <div class="row justify-content-center gap-3 gap-xlg-5">
         <div class="card col-md-3 px-0">
@@ -152,7 +152,7 @@
 
   <!-- contacto -->
   <form id="contacto" class="container">
-    <h2>CONTACTO</h2>
+    <h2 class="mt-5">CONTACTO</h2>
     <hr>
     <div class="mb-3">
       <label for="exampleFormControlInput1" class="form-label">Nombre</label>
