margin top en cards

--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
   <section id="destacados" class="container">
     <h2 class="text-center mt-5">DESTACADOS</h2>
     <hr>
-    <div class="container my-5">
-      <div class="row justify-content-between gap-3">
-        <div class="card col-md-3 mt-md-4 px-0">
+    <div class="container mb-5">
+      <div class="row justify-content-center justify-content-md-between gap-3">
+        <div class="card col-md-3 mt-5 px-0">
           <img src="./assets/img/card1.jpg" class="card-img-top img-fluid" alt="">
           <div class="card-body">
             <h5>Lorem ipsum dolor sit amet</h5>
@@ -121,7 +121,7 @@
           </div>
         </div>
 
-        <div class="card col-md-3 mt-md-4 px-0">
+        <div class="card col-md-3 mt-5 px-0">
           <img src="./assets/img/card2.jpg" class="card-img-top img-fluid" alt="">
           <div class="card-body">
             <h5>Consectetur, adipisicing elit</h5>
@@ -130,7 +130,7 @@
           </div>
         </div>
 
-        <div class="card col-md-3 mt-md-4 px-0">
+        <div class="card col-md-3 mt-5 px-0">
           <img src="./assets/img/card3.jpg" class="card-img-top img-fluid" alt="">
           <div class="card-body">
             <h5>Sed do eiusmod tempor incididunt ut labore</h5>
@@ -139,7 +139,7 @@
           </div>
         </div>
 
-        <div class="card col-md-3 mt-md-4 px-0">
+        <div class="card col-md-3 mt-5 px-0">
           <img src="./assets/img/card4.jpg" class="card-img-top img-fluid" alt="">
           <div class="card-body">
             <h5>Ut enim ad minim veniam</h5>
