--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   </nav>
 
   <!-- carrusel -->
-  <div id="carouselExample" class="carousel slide">
+  <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="./assets/img/carousel1.jpg" class="d-block w-100" alt="carousel 1">
@@ -145,10 +145,6 @@
             <h5>Ut enim ad minim veniam</h5>
             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique placeat iste et
               repudiandae magnam provident unde excepturi possimus iure fugiat error, nisi quis.</p>
-          </div>
-        </div>
-      </div>
-    </div>
           </div>
         </div>
       </div>
